--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -215,8 +215,10 @@
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
     <None Include="Assets\Spine\version.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
+    <None Include="Assets\ModularMotion\ModularEditor.dll" />
     <None Include="Assets\images\sprites\minions\undeadCaster\skeletonUndead_Caster_Minion.atlas.txt" />
     <None Include="Assets\images\sprites\minions\undead\skeletonUndead_Minion.atlas.txt" />
+    <None Include="Assets\ModularMotion\ICSharpCode.SharpZipLib.dll" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\images\sprites\dps\bkup\skeleton.atlas.txt" />
     <None Include="Assets\codeandweb.com\Readme.txt" />
@@ -230,7 +232,10 @@
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\ModularMotion\ModularMotion.dll" />
+    <None Include="Assets\ModularMotion\ModularMotion.xml" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+    <None Include="Assets\ModularMotion\ModularExtension.dll" />
     <None Include="Assets\images\sprites\minions\insect\slugMaggot.atlas.txt" />
     <None Include="Assets\images\sprites\dps\skeleton.atlas.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Masking.shader" />
@@ -493,6 +498,18 @@
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
       <HintPath>Library\PackageCache\com.unity.analytics@3.5.3\Unity.Analytics.Tracker.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>Assets\ModularMotion\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="ModularEditor">
+      <HintPath>Assets\ModularMotion\ModularEditor.dll</HintPath>
+    </Reference>
+    <Reference Include="ModularMotion">
+      <HintPath>Assets\ModularMotion\ModularMotion.dll</HintPath>
+    </Reference>
+    <Reference Include="ModularExtension">
+      <HintPath>Assets\ModularMotion\ModularExtension.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2020.1.4f1\2021.1.13f1\Editor\Data\NetStandard\ref\2.0.0\netstandard.dll</HintPath>
