--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Graphics\Max2D.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Misc\MeshBrush.cs" />
     <Compile Include="Assets\scripts\Managers\Crafting\CraftingController.cs" />
+    <Compile Include="Assets\scripts\Managers\CharacterMenuScene Scripts\TalentTrees\TalentNode.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Rendering\Buffers\LightBuffer.cs" />
     <Compile Include="Assets\scripts\Models\damageModels\PlayerDamageModel.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Components\Occlusion\LightOcclusion2D.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Assets\scripts\Models\characterModels\CharacterTemplate.cs" />
     <Compile Include="Assets\scripts\Managers\CharacterMenuScene Scripts\skillMenu\skillItemData.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Triangulation\Advanced Triangulator\TriangulationUtility.cs" />
+    <Compile Include="Assets\scripts\Managers\BattleScene Scripts\CombatLogManager.cs" />
     <Compile Include="Assets\scripts\Helpers\ParallaxLayer.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Components\LightTilemapOcclusion\OcclusionTileset.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Utilities\Misc\TimerHelper.cs" />
@@ -176,6 +178,7 @@
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Components\Event Handling\LightEventListener.cs" />
     <Compile Include="Assets\scripts\Helpers\Utility\DragAndDropMasterController.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Components\Occlusion\LightTilemapOcclusion2D.cs" />
+    <Compile Include="Assets\LogItemController.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Utilities\2D\Vector2D.cs" />
     <Compile Include="Assets\scripts\Managers\Crafting\Recipes\RecipeController.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Triangulation\Advanced Triangulator\TriangulationWrapper.cs" />
@@ -214,6 +217,7 @@
     <Compile Include="Assets\scripts\Managers\ExplorerScene Scripts\enemies\enemyEncounterController.cs" />
     <Compile Include="Assets\scripts\Helpers\Utility\GenericMouseInteraction.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Rendering\Manager.cs" />
+    <Compile Include="Assets\scripts\Managers\ExplorerScene Scripts\RouteEditor\TriggerEditor.cs" />
     <Compile Include="Assets\scripts\Managers\CharacterMenuScene Scripts\swapSkillMenu\EyeSkillSlotManager.cs" />
     <Compile Include="Assets\scripts\Managers\BattleScene Scripts\PhaseManager.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Utilities\2D\Mathd.cs" />
@@ -278,7 +282,9 @@
     <Compile Include="Assets\CustomRouteController.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Settings\LightSettings.cs" />
     <Compile Include="Assets\scripts\Models\damageModels\EnemyDamageModel.cs" />
+    <Compile Include="Assets\scripts\Managers\ExplorerScene Scripts\RouteEditor\MapEditorIconTrigger.cs" />
     <Compile Include="Assets\scripts\Managers\BattleScene Scripts\BattleDetailsManager.cs" />
+    <Compile Include="Assets\scripts\Managers\CharacterMenuScene Scripts\TalentTrees\WeaponTalent.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Rendering\Light\Sorting\SortObject.cs" />
     <Compile Include="Assets\scripts\Models\statusModels\StatusNameEnum.cs" />
     <Compile Include="Assets\FunkyCode\SmartLighting2D\Scripts\Material\Extended\BumpMask.cs" />
@@ -346,6 +352,7 @@
     <Compile Include="Assets\scripts\Managers\CharacterMenuScene Scripts\skillMenu\skillItemBehaviour.cs" />
     <Compile Include="Assets\scripts\Helpers\Assets\ItemFinder.cs" />
     <Compile Include="Assets\scripts\Models\BasicModel.cs" />
+    <Compile Include="Assets\scripts\Managers\BattleScene Scripts\LogIndicatorController.cs" />
     <Compile Include="Assets\FunkyCode\SmartUtilities2D\Scripts\Triangulation\Advanced Triangulator\TriangulationAlgorithm.cs" />
     <Compile Include="Assets\scripts\Managers\Base Class\BaseSkillManager.cs" />
     <Compile Include="Assets\scripts\Managers\CharacterMenuScene Scripts\SlotManagerBase.cs" />
@@ -512,6 +519,7 @@
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shaders\Internal\Light\FreeFormFalloff.shader" />
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shader Graph\SL2D_ShaderGraphAPI.hlsl" />
+    <None Include="Assets\fonts\Neuton,Tagesschrift\Neuton\OFL.txt" />
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shaders\LitShaders\Sprites\Misc\LitMax.shader" />
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shaders\LitShaders\SL2D_ShaderFast.cginc" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
@@ -549,6 +557,7 @@
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shaders\Internal\LightShadow\Fast.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile.shader" />
     <None Include="Assets\images\sprites\tank\bkUp\skeleton.atlas.txt" />
+    <None Include="Assets\fonts\Neuton,Tagesschrift\Tagesschrift\OFL.txt" />
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shaders\Internal\Multiply.shader" />
     <None Include="Assets\FunkyCode\SmartLighting2D\Resources\Shaders\LitShaders\Sprites\DayDepth\DepthPass.shader" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_Sprite.shader" />
